[gd_scene load_steps=4 format=2]

[ext_resource path="res://Misc/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Torretas/Bases de Torretas/TorretaBase.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 9 )

[node name="TorretaBase" type="Area2D"]
collision_layer = 64
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Deteccion" type="Area2D" parent="."]
position = Vector2( 0, -9 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deteccion"]

[node name="Eje" type="Node2D" parent="."]
position = Vector2( 0, -13 )

[node name="Sprite" type="Sprite" parent="Eje"]
modulate = Color( 0.407843, 0.407843, 0.407843, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9 )
shape = SubResource( 1 )

[node name="shotCD" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="HealthBar" parent="Control" instance=ExtResource( 1 )]
margin_top = 2.0
margin_bottom = 13.0

[node name="stasis" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_TorretaBase_body_entered"]
[connection signal="timeout" from="shotCD" to="." method="_on_shotCD_timeout"]
[connection signal="timeout" from="stasis" to="." method="_on_stasis_timeout"]
